<?xml version="1.0"?>
<package>

    <name>iris_lama_ros</name>
    <version>1.2.0</version>
    <description>
        ROS package of IRIS Localization and Mapping (LaMa).
    </description>

    <author     email="efp@ua.pt">Eurico Pedrosa</author>
    <maintainer email="efp@ua.pt">Eurico Pedrosa</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>tf</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rosbag</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>tf_conversions</build_depend>
    <build_depend>rosbag_storage</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>iris_lama</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>yaml-cpp</build_depend>

    <run_depend>tf</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rosbag</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>tf_conversions</run_depend>
    <run_depend>rosbag_storage</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_filters</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>iris_lama</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>yaml-cpp</run_depend>

    <export />

</package>
